# pdf-tools-python

./: .gitignore  .replit  DEPLOYMENT.md  Dockerfile  README.md  app.py  deploy.sh  deployment_guide.md  gunicorn_config.py  pyproject.toml  render.yaml  replit.md  requirements.txt  run_production.sh
content/: tool_articles.py
static/css/: style.css
static/js/: crop.js  edit.js  editor.js  main.js  merge.js  organize.js  rotate.js  sign.js  signature.js  split.js  upload.js
templates/: about.html  all_tools.html  base.html  contact.html  index.html  privacy.html  tool.html  tool_crop.html  tool_edit.html  tool_merge.html  tool_organize.html  tool_rotate.html  tool_sign.html  tool_split.html
templates/partials/: article.html
tools/: __init__.py  compress_pdf.py  crop_pdf.py  edit_pdf.py  excel_to_pdf.py  extract_pdf.py  jpg_to_pdf.py  merge_pdf.py  ocr_pdf.py  organize_pdf.py  pdf_to_excel.py  pdf_to_jpg.py  pdf_to_powerpoint.py  pdf_to_word.py  pptx_to_pdf.py  protect_pdf.py  remove_pages.py  rotate_pdf.py  sign_pdf.py  split_pdf.py  test_fix.py  unlock_pdf.py  watermark_pdf.py  word_to_pdf.py
